--- a/backend/package.json
+++ b/backend/package.json
@@ -28,25 +28,18 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "^2.4.3",
-    "compression": "^1.8.1",
-    "cookie-parser": "^1.4.7",
     "cors": "^2.8.6",
-    "cpf-cnpj-validator": "^1.0.3",
     "csv-parser": "^3.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.10.0",
-    "express-validator": "^6.15.0",
     "helmet": "^7.2.0",
-    "hpp": "^0.2.3",
     "ioredis": "^5.4.1",
     "joi": "^17.9.2",
     "jsonwebtoken": "^9.0.2",
-    "luxon": "^3.4.0",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "natural": "^6.12.0",
-    "node-cron": "^3.0.3",
     "pg": "^8.11.3",
     "pg-promise": "^11.5.4",
     "qrcode": "^1.5.3",
@@ -54,11 +47,9 @@
     "redis": "^4.7.1",
     "sequelize": "^6.37.5",
     "uuid": "^9.0.0",
-    "validator": "^13.15.26",
     "whatsapp-web.js": "^1.22.1",
     "winston": "^3.19.0",
-    "winston-daily-rotate-file": "^5.0.0",
-    "xss-clean": "^0.1.4"
+    "winston-daily-rotate-file": "^5.0.0"
   },
   "devDependencies": {
     "eslint": "^8.47.0",
